k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aem
  labels:
    app.kubernetes.io/name: aem
