k8s/content-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-service
  namespace: aem
  labels:
    app: content-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: content-service
