k8s/edge-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-cache
  namespace: aem
  labels:
    app: edge-cache
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: edge-cache
